[project]
name = "omdena-ai-driven-legal-compliance-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
]
