[project]
name = "omdena-ai-driven-legal-compliance-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "azure-ai-ml>=1.24.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "presidio-image-redactor>=0.0.55",
    "rich>=13.9.4",
    "ruff>=0.9.3",
]
